
0.1.1 - unreleased
------------------------------------------------------------------------------

 +  Added new hook ircbot_parsemsg_hook, all incoming msg's are passed to these
    hooks
  
 +  Added bug-info (.bug) command