@@ -28,6 +28,9 @@ channel = iuscommunity
 # The nick to register as
 nick = iusbot
 
+# Amount of times in seconds to send PINGs to the server (keep alive)
+ping_cycle = 60
+
 # URL, Username and API Key for bit.ly URL shortening
 bitly_baseurl = http://api.bit.ly/v3/shorten/
 bitly_username = iuscommunity
